--- a/README
+++ b/README
@@ -1,11 +1,12 @@
-Faun's Dot Files
+Gabriel's Dot Files
 
+Modified from Faun's Dot Files
 Credit to Ben Orenstein & Ryan Bates
 
 These are config files to set up a system the way I like it.
 
 Installation
 
-  git clone git://github.com/faunzy/dotfiles ~/.dotfiles
+  git clone git://github.com/ggilder/dotfiles ~/.dotfiles
   cd ~/.dotfiles
   rake install
