--- a/README
+++ b/README
@@ -7,6 +7,7 @@ These are config files to set up a system the way I like it.
 
 Installation
 
-  git clone git://github.com/ggilder/dotfiles ~/.dotfiles
-  cd ~/.dotfiles
+  mkdir -p ~/src
+  git clone git://github.com/ggilder/dotfiles ~/src/dotfiles
+  cd ~/src/dotfiles
   rake install
