--- a/README
+++ b/README
@@ -8,7 +8,7 @@ These are config files to set up a system the way I like it.
 Installation
 
   mkdir -p ~/src
-  git clone git://github.com/ggilder/dotfiles ~/src/dotfiles
+  git clone --recursive git://github.com/ggilder/dotfiles ~/src/dotfiles
   cd ~/src/dotfiles
   rake install
 
